mobile navbar collapse issue

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -282,7 +282,6 @@ hr {
     background: #101010;
     color: #ffffff;
     height: 800px;
-    padding-top: 150px;
 }
 
 #contact .form-control {
@@ -343,10 +342,6 @@ footer {
 /*---------------------------------------
    10 Social icon             
 -----------------------------------------*/
-.social-icon {
-    padding: 0;
-    margin: 0;
-}
 
 .social-icon li {
     list-style: none;
